@@ -1,4 +1,133 @@
 import UIKit
 
-class AKUserConfigurationViewController: AKCustomViewController
-{}
+class AKUserConfigurationViewController: AKCustomViewController, UITextFieldDelegate
+{
+    // MARK: Local Enums
+    private enum LocalEnums: Int {
+        case username = 1
+    }
+    
+    // MARK: Outlets
+    @IBOutlet weak var scrollContainer: UIScrollView!
+    @IBOutlet weak var controlsContainer: UIView!
+    @IBOutlet weak var usernameValue: UITextField!
+    @IBOutlet weak var save: UIButton!
+    
+    // MARK: Actions
+    @IBAction func save(_ sender: Any)
+    {
+        let username = AKUsername(inputData: self.usernameValue.text!)
+        do {
+            try username.validate()
+            try username.process()
+        }
+        catch {
+            Func.AKPresentMessageFromError(controller: self, message: "\(error)")
+            return
+        }
+        
+        let newUser = AKUserInterface(username: username.outputData)
+        do {
+            try newUser.validate()
+        }
+        catch {
+            Func.AKPresentMessageFromError(controller: self, message: "\(error)")
+            return
+        }
+        
+        if let user = AKUserBuilder.mirror(interface: newUser) {
+            DataInterface.addUser(user: user)
+            self.navigationController?.popViewController(animated: true)
+        }
+    }
+    
+    // MARK: AKCustomViewController Overriding
+    override func viewDidLoad()
+    {
+        super.viewDidLoad()
+        self.customSetup()
+        
+        // Load the data.
+        self.usernameValue.text = DataInterface.getUsername()
+    }
+    
+    override func viewDidLayoutSubviews()
+    {
+        super.viewDidLayoutSubviews()
+        
+        // Custom L&F.
+        self.usernameValue.layer.cornerRadius = GlobalConstants.AKButtonCornerRadius
+        self.save.layer.cornerRadius = GlobalConstants.AKButtonCornerRadius
+    }
+    
+    // MARK: UITextFieldDelegate Implementation
+    func textField(_ textField: UITextField, shouldChangeCharactersIn range: NSRange, replacementString string: String) -> Bool
+    {
+        if range.length + range.location > (textField.text?.characters.count)! {
+            return false
+        }
+        
+        let newLen = (textField.text?.characters.count)! + string.characters.count - range.length
+        
+        switch textField.tag {
+        case LocalEnums.username.rawValue:
+            return newLen > GlobalConstants.AKMaxUsernameLength ? false : true
+        default:
+            return newLen > GlobalConstants.AKMaxUsernameLength ? false : true
+        }
+    }
+    
+    func textFieldShouldBeginEditing(_ textField: UITextField) -> Bool
+    {
+        Func.AKAddDoneButtonKeyboard(textField, controller: self)
+        
+        switch textField.tag {
+        case LocalEnums.username.rawValue:
+            var offset = textField.convert(textField.frame, to: self.scrollContainer).origin
+            offset.x = 0
+            
+            var keyboardHeight = GlobalConstants.AKKeyboardHeight
+            if textField.autocorrectionType == UITextAutocorrectionType.no {
+                keyboardHeight -= GlobalConstants.AKAutoCorrectionToolbarHeight
+            }
+            
+            let height = Func.AKGetComponentAbsoluteHeightPosition(container: self.controlsContainer, component: self.save)
+            if keyboardHeight > height {
+                offset.y = abs(keyboardHeight - height)
+            }
+            else {
+                offset.y = 0
+            }
+            
+            self.scrollContainer.setContentOffset(offset, animated: true)
+            
+            return true
+        default:
+            return true
+        }
+    }
+    
+    func textFieldShouldEndEditing(_ textField: UITextField) -> Bool
+    {
+        switch textField.tag {
+        default:
+            var offset = textField.convert(textField.frame, to: self.scrollContainer).origin
+            offset.x = 0
+            offset.y = 0
+            
+            self.scrollContainer.setContentOffset(offset, animated: true)
+            
+            return true
+        }
+    }
+    
+    // MARK: Miscellaneous
+    func customSetup()
+    {
+        super.setup()
+        
+        // Delegate & DataSource
+        self.usernameValue.delegate = self
+        self.usernameValue.tag = LocalEnums.username.rawValue
+    }
+}
