@@ -3,6 +3,7 @@ Description
     * First version of the App.
 Changes
     * Version 1.0 Build 01 (2017/XX/XX)
+        * Added support for modifying the username. (2017/04/03)
         * Added support for modifying project's times. (2017/04/03)
         * Added support for BSB in backups. (2017/04/03)
         * Added support for Swift 3.1 and Xcode 8.3. (2017/04/03)
